--- a/templates/base.html
+++ b/templates/base.html
@@ -14,4 +14,5 @@
     {% block content%}
 
     {% endblock%}
+    <script src="{{ url_for('static', filename='javascript/main.js') }}"></script>
 </body>
